--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -90,7 +90,7 @@
 		  <div class="col-md-10">
 		  <p class="justified">
             <span class = "introtext"> Meet <b>Emi</b>, a 38 year old runner who is <span>visually impaired. He wants a device that can help him detect obstacles while running. </span> </p>
-			<span class = "introtext"> His main problem, he says is with moving obstacles and ones at head height. He finds it hard to concentrate on the path because of the obstacles. To alleviate some of his problems, he approached us for help. </span></p>
+			<span class = "introtext"> His main problem is with moving obstacles and ones at head height. He finds it hard to concentrate on the path because of the obstacles. To alleviate some of his problems, he approached us for help. </span></p>
 			<span class = "introtext"> So we decided to build a device for him. </span> </p>
           </div>
 		</div>
@@ -100,13 +100,15 @@
 	<!-- ======= Requirements Details ======= -->
 	<section id="requirements">
       <div class="container" data-aos="fade-up">
-          <div>
+          <div class="horizontalline1"></div>
+		  <div>
           <h2 class="prototype-introduction" id="requirements"><b>So what are Emi's base requirements?</b></h2>
           </div>
 		  <p class="justified">
             <span class = "introtext"> Emi wants a device that relies on haptics and uses sensors to detect obstacles. He also wants it to be non-invasive and portable so that it does not hinder his run.</span> </p>
-          </div> 
-    </section>
+		  <div class="horizontalline"></div>
+		</div> 
+	</section>
 	
 	<!-- End Requirements Details -->
 	
@@ -114,10 +116,10 @@
 	<section>
       <div class="container" data-aos="fade-up">
           <div>
-          <h2 class="prototype-introduction"><b>Research Questions.</b></h2>
+          <h2><b>Research Questions</b></h2>
           </div>
 		  <p class="justified">
-            <span class = "introtext"> Emi gave his requirements, now we had a job on our hands. The time had come to create a list of <span class="irqhighlight">initial research questions</span>.</span> </p>
+            <span class = "introtext"> Emi gave his requirements, now we had a job on our hands. The time had come to create a list of <span class="irqhighlight">initial research questions</span>. Each member of the team came up with list of research questions and compiled later.</span> </p>
 			
 		  </div> 
     </section>
@@ -126,12 +128,24 @@
 	
 	<section id="process">
       <div class="container" data-aos="fade-up">
-          <div>
-          <h2 class="prototype-process" id="process"><b>Initial Whiteboarding</b></h2>
+          <h2 id="process"><b>Blue Sky thinking</b></h2>
+		  <div class ="row">
+		  <div class ="col-md-4">
+		  <img src="assets/img/Personal/Discussion 2.jpg" class="avatar3" alt="">
           </div>
+		  <div class="col-md-8">
 		  <p class="justified">
-            <span class = "introtext"> Our team sat together for round table discussions and whiteboarding. Keeping Emi's initial requirements in mind, we came up with a defined process, and a set of scenarios to aid future work. 	</span> </p>
-          </div> 
+            <span class = "researchtext"> With the research questions now generated, our team sat together for round table discussions and whiteboarding. Keeping Emi's initial requirements in mind, we came up with a defined process, and a set of scenarios to aid future work. 	</span> </p>
+		</div>
+			</div>
+    </section>
+	
+	<section id="process">
+      <div class="container" data-aos="fade-up">
+          <h2><b>The Process</b></h2>
+		  <img src="" class ="avatar4" alt="">
+          </div>
+		  </div>
     </section>
 	
   </main><!-- End #main -->
