--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -169,7 +169,7 @@
           <h2><b>Research</b></h2>
           </div>
 		  <p class="justified">
-            <span class = "introtext"> To come up with a working prototype for Emi, we had to go in depth about the subject, do some qualitative research and <span class="irqhighlight"> note down the findings </span>.</p>
+            <span class = "introtext"> To come up with a working prototype for Emi, we had to go in depth about the subject, do some qualitative research and <span class="irqhighlight"> gain useful insights.</span>.</p>
 			<h4><b>User Interviews </b></h4>
 			<div class ="row">
 			<div class ="col-md-4">
@@ -198,7 +198,7 @@
 			  </div>
 			  </div>
 			<div class="col-md-8">
-			<p class="justified"><span class="researchtext1"> To get a feel of what they feel like when they wear devices while moving from one place to another, we decided to buy some of the wearables in the market today, wear then and draw insights.</span> </p>
+			<p class="justified"><span class="researchtext1"> To get a feel of what they feel like when they wear devices while moving from one place to another, we decided explore some of the devices thoroughly.</span> </p>
 			</div>
 			</div>
 			
