--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -275,8 +275,8 @@
           </div>
 		  <div class="col-md-10">
 		  <p class="justified">
-            <span class = "introtext">We were ready to show Emi the prototype. But what sets our prototype apart and user oriented?  </span> </p>
-			<h4><span class="irqhighlight2"> THE Unique Selling Point  </span></h4>
+            <span class = "introtext">We were ready to show Emi the prototype. But what sets our prototype apart, and what makes it user oriented?  </span> </p>
+			<h4><span class="irqhighlight2"> Unique Selling Points  </span></h4>
 			<span class = "introtext"> This low cost device consists of a variety of sensors to offer a wider detection range. The output works on haptics and can be used by deaf-blind people as well. The users do not have to spend money on devices that are expensive and bear only one sensor as this prototype is a handy alternative.  </span> </p>
           </div>
 		</div>
