--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -15,6 +15,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -38,7 +39,7 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#"><span class="whitecolor">Projects</span></a>
@@ -65,8 +66,9 @@
             <ul>
               <li><strong>Categories</strong>: Accessibility, Wearable Technology, User-Centered Design</li>
               <li><strong>User Base</strong>: Runners who are blind</li>
-              <li><strong>Project Timeline</strong>: 2020 - January to December</li>
+              <li><strong>Project Timeline</strong>: 2020 - Present</li>
               <li><strong>Team Members</strong>: 4 students and 1 faculty </a></li>
+			  <li><strong>My Role</strong>: Lead User researcher and prototype developer</a></li>
             </ul>
 
             <p class="justified">
@@ -90,8 +92,7 @@
 		  <div class="col-md-10">
 		  <p class="justified">
             <span class = "introtext"> Meet <b>Emi</b>, a 38 year old runner who is <span>visually impaired. He wants a device that can help him detect obstacles while running. </span> </p>
-			<span class = "introtext"> His main problem is with moving obstacles and ones at head height. He finds it hard to concentrate on the path because of the obstacles. To alleviate some of his problems, he approached us for help. </span></p>
-			<span class = "introtext"> So we decided to build a device for him. </span> </p>
+			<span class = "introtext"> His main problem is with moving obstacles and ones at head height. He finds it hard to concentrate on the path because of the obstacles. To alleviate some of his problems, our team at the University of Maryland, Baltimore County decided to build a device for him. The project was done under the watchful eye of Dr.Ravi Kuber. </span> </p>
           </div>
 		</div>
         </div>
@@ -115,16 +116,25 @@
 	<!-- ======= Requirements Details ======= -->
 	<section>
       <div class="container" data-aos="fade-up">
+          <h2><b>Assumptions</b></h2> 
+		  <p class="justified">
+            <span class = "introtext"> We made some assumptions before the team started the whiteboarding process. Some of the assumptions varied from the runners like Emi running regularly, using tethers while running, using existing technology, finding technology usage difficult while running, etc.,</span> </p>
+		</div>
+    </section>
+	
+	<section>
+      <div class="container" data-aos="fade-up">
           <div>
           <h2><b>Research Questions</b></h2>
           </div>
 		  <p class="justified">
             <span class = "introtext"> Emi gave his requirements, now we had a job on our hands. The time had come to create a list of <span class="irqhighlight">initial research questions</span>. Each member of the team came up with list of research questions and compiled later.</span> </p>
-			<p><span class="typed" data-typed-items="Can the users effienciently look for the information they need after using our prototype?, Can the prototype clearly distinguish obstacles in each path?, Can the prototype be tested on any given terrain yielding efficient results?, Would the users be able to connect and run the setup successfully should there be a reassembly?, How easily can the prototype be worn by the prospective users"></span></p>
+			<p><span class="typed" data-typed-items= "Can the users effienciently look for the information they need after using our prototype?, Can the prototype clearly distinguish obstacles in each path?, Can the prototype be tested on any given terrain yielding efficient results?, Would the users be able to connect and run the setup successfully should there be a reassembly?, How easily can the prototype be worn by the prospective users"></span></p>
 		  </div> 
     </section>
 	
 	<!-- End Requirements Details -->
+	
 	
 	<section>
       <div class="container" data-aos="fade-up">
@@ -249,7 +259,7 @@
 		  <img src="assets/img/Personal/Build.jpg" class="avatar7" alt="">
           </div>
 		  <p class="justified">
-            <span class = "introtext"> We were now at a stage where we could build the prototype for Emi. We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<span class="irqhighlight"><b> we decided to go with a RUNNING BELT. </b></span></p>
+            <span class = "introtext"> We were now at a stage where we could build the prototype for Emi. We chose 3 different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research material gathered,<span class="irqhighlight"><b> we decided to go with a RUNNING BELT. </b></span>  As one of the two prototype developers on the team, I set myself a deadline to get everything up and running. Within two months, it was ready for review.</p>
 			<h4 class ="uppermargin"><b>Prototype</b></h4>
 			<div class ="row">
 		  <div class="col-md-6">
@@ -303,13 +313,28 @@
 			  </div>
 			  <div class ="col-md-4 countermargin">
 			  <blockquote> <i>If we can move on to kind of more specifics of how the device responds. So, if it's clear that we have awareness of the user you can get objects in front of you to the sides and behind you.</i></blockquote>
-			  <blockquote> <i>Yeah, I guess my question is, how we&#39;re find is the vibration. Is it just going to drop off if you move to the left or right of the obstacle?</i></blockquote>
+			  <blockquote> <i>Yeah, I guess my question is, how we find the vibration. Is it just going to drop off if you move to the left or right of the obstacle?</i></blockquote>
 			  </div>
             </div>
-    </section><!-- End Portfolio Details -->
+			<h4><b>A/B Testing</b></h4>
+			<div class ="row">
+			<div class ="col-md-4">
+			<img src="assets/img/Personal/AB Testing.jpg" class="avatar7" alt="">
+			</div>
+			<div class ="col-md-8">
+			<p class ="justified"><span class = "introtext">From the insights obtained we are currently doing rounds of A/B testing with the version of the prototype present before the evaluation studies in order to continuously improve the interaction. - WORK IN PROGRESS </span> </p>
+			</div>
+			</div>
+	</div>
+    </section><!-- End Evaluation Details -->
   </main><!-- End #main -->
   
-  
+  <section id="insights">
+      <div class="container" data-aos="fade-up">
+          <h2 class="headingtitle"><b>Takeaways</b></h2>
+		<p class="headingtitle"><span class="introtext">From the start to finish, this project has been a learning curve, and we are still on the process of refining the prototype. I realized that empathy generation is key because of the type of audience involved. In addition to that, I also learned to employ the human aspect in research. For without connection and interaction with people, I believe that nothing is possible. Figuring out the research techniques and drawing the right insights is a challenge in itself. Additionally, as we are dealing with a niche audience, getting people for interviews and observation was also a challenge. Here is hoping that this prototype becomes a product someday.  </span></p>
+	  </div>
+    </section>
   
    <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -347,7 +372,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/carousel.js"></script>
 
 </body>
 
