--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </svg>
                 <i class='bx bx-braille'></i>
               </div>
-              <h4><a href="navigationl-aid.html">TRIDENT</a></h4>
+              <h4><a href="navigational-aid">TRIDENT</a></h4>
               <p>A navigational wearable aid for individuals who are blind</p>
             </div>
           </div>
