--- a/coeit-research.html
+++ b/coeit-research.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Personal/Logo.png" rel="icon">
+  <link href="assets/img/Personal/Logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -36,42 +36,56 @@
 </head>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-light light">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"><span class="whitecolor">Projects</span></a>
+      </li>
+    </ul>
+    <span class="whitecolor">A researcher who loves storytelling</span>
+  </div>
+</nav>
 
-  <main id="main">
+  <main>
 
     <!-- ======= Portfolio Details ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container" data-aos="fade-up">
+        <section id="portfolio-details" class="portfolio-details">
+      <div class="container herosection" data-aos="fade-up">
 
         <div class="row">
 
-          <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
-            <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt="">
-            </div>
+          <div class="col-lg-8 titlebox">
+            <h1 class="portfolio-title1">University of Maryland, Baltimore County - College of Engineering and Information Technology's Research Website Redesign</h1>
+            
           </div>
 
-          <div class="col-lg-4 portfolio-info">
-            <h3>Project information</h3>
+          <div class="col-lg-4 portfolio-info introbox">
+            <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
+              <li><strong>User Base</strong>: Students, Faculty, Researchers.</li>
+              <li><strong>Project Timeline</strong>: January 2020 - May 2020</li>
+              <li><strong>Team Members</strong>: 2 student team </a></li>
+			  <li><strong>My Role</strong>: User Researcher</a></li>
             </ul>
 
-            <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+            <p class="justified">
+             Research websites are generally verbose. So it must be said that people would like to look through the headlines and then proceed towards the website’s actual content. The COEIT research website was identified by people to be a little gaudy on the eye and have some prevailing issues that make the user shy away from the current website. Hence the attempt to redesign.
             </p>
           </div>
 
         </div>
 
       </div>
-    </section><!-- End Portfolio Details -->
+    </section><!--
 
   </main><!-- End #main -->
 
