--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </svg>
                 <i class='bx bx-sitemap'></i>
               </div>
-              <h4><a href="">Web Research Project #1</a></h4>
+              <h4><a href="coeit-research.html">Web Research Project #1</a></h4>
               <p>User research project of the University of Maryland, Baltimore County's College of Engineering and Information Technology's RESEARCH website.</p>
             </div>
           </div>
