--- a/coeit-research.html
+++ b/coeit-research.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>COEIT Research Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -68,7 +68,7 @@
           </div>
 
           <div class="col-lg-4 portfolio-info introbox">
-            <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
+            <h3><b>PROJECT INFORMATION</b></h3>
             <ul>
               <li><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
               <li><strong>User Base</strong>: Students, Faculty, Researchers.</li>
@@ -85,7 +85,51 @@
         </div>
 
       </div>
-    </section><!--
+    </section>
+	
+	<section>
+      <div class="container" data-aos="fade-up">
+	<h2 class="portfolio-title"><b>Shendelzare and her bid to improve usability</b></h2>
+		  <div class ="row">
+		  <div class ="col-md-2">
+		  <img src="assets/img/Personal/avatar3.png" class="img-fluid avatar" alt="">
+          </div>
+		  <div class="col-md-10">
+		  <p class="justified">
+            <span class = "introtext"> Shendelzare, is the lead when it comes to the University of Maryland, Baltimore County's College of Engineering and Information technology's <b>(Abbv COEIT)</b> research website</span> </p>
+			<span class = "introtext"> Her issues stem from the decreased usability of the COEIT research website. The team of another student and myself decided to take matters into our own hands as a term research project and make the website usable, user friendly via user researh and incorporating UX methodologies. </span> </p>
+          </div>
+		</div>
+        </div>
+    </section>
+	
+	<section id="requirements">
+      <div class="container" data-aos="fade-up">
+          <div class="horizontalline4"></div>
+		  <div>
+          <h2 class="coeit-introduction" id="requirements"><b>Requirements</b></h2>
+          </div>
+		  <p class="justified">
+            <span class = "introtext"> Shendelzare wants increased usability and improved traffic on the website.</span> </p>
+		  <div class="horizontalline3"></div>
+		</div> 
+	</section>
+	
+	<section>
+      <div class="container" data-aos="fade-up">
+          <h2><b>Initial usability concerns</b></h2> 
+		  <p class="justified">
+            <span class = "introtext"> Shendelzare outlined some usability concerns and gave us a document highlighting the issues. Concerns were related to <span class="irqhighlight"> inconsistent content </span>, <span class="irqhighlight">  limited to no user engagement </span>, <span class="irqhighlight"> content being verbose </span>, <span class="irqhighlight">  no clear pathways for research content </span>, and <span class="irqhighlight">  the site not being designed for an assorment of users.</span> </p>
+		</div>
+    </section>
+	
+	<section>
+      <div class="container" data-aos="fade-up">
+          <h2><b>So what did we do?</b></h2> 
+		  <p class="justified">
+            <span class = "introtext"> We had our work cut out. As researchers in this project, we had to understand the W's. <b>(Who are the users?, What problem are we solving?, How are we solving the problem?)<b> </span> </p>
+		</div>
+    </section>
 
   </main><!-- End #main -->
 
