--- a/coeit-research.html
+++ b/coeit-research.html
@@ -127,9 +127,16 @@
       <div class="container" data-aos="fade-up">
           <h2><b>So what did we do?</b></h2> 
 		  <p class="justified">
-            <span class = "introtext"> We had our work cut out. As researchers in this project, we had to understand the W's. <b>(Who are the users?, What problem are we solving?, How are we solving the problem?)<b> </span> </p>
-		</div>
-    </section>
+            <span class = "introtext"> We had our work cut out. As researchers in this project, we had to get to the basic questions </span> </p>
+		
+		<h4 class = "userbasecolor"><b>Who are the users? </b></h4>
+		<p class="justified"> <span class = "introtext"> The COEIT research website is a source of information regarding research in UMBC. It is used by students aged 18-35, as well as professors (Age 30-70). External researchers may also use the website to learn more about research being conducted at UMBC. </span> </p>	
+		<h4 class = "userbasecolor"><b>What problem are we solving? </b></h4>
+		<p class="justified"> <span class = "introtext"> The COEIT research website has a lot of usability issues. We are trying to improve the usability and enable more people visit the website. </span> </p>
+		<h4 class = "userbasecolor"><b>How are we solving the problem? </b></h4>
+		<p class="justified"> <span class = "introtext"> As we were two people solving the issue, we needed a process and a set of research methods to help steer the redesign. </span> </p>
+    </div>
+	</section>
 
   </main><!-- End #main -->
 
