--- a/coeit-research.html
+++ b/coeit-research.html
@@ -127,7 +127,7 @@
       <div class="container" data-aos="fade-up">
           <h2><b>So what did we do?</b></h2> 
 		  <p class="justified">
-            <span class = "introtext"> We had our work cut out. As researchers in this project, we had to get to the basic questions </span> </p>
+            <span class = "introtext"> We had our work cut out. As researchers in this project, we wanted to get answers to basic questions. </span> </p>
 		
 		<h4 class = "userbasecolor"><b>Who are the users? </b></h4>
 		<p class="justified"> <span class = "introtext"> The COEIT research website is a source of information regarding research in UMBC. It is used by students aged 18-35, as well as professors (Age 30-70). External researchers may also use the website to learn more about research being conducted at UMBC. </span> </p>	
@@ -138,7 +138,92 @@
     </div>
 	</section>
 
+	<section id="process2">
+      <div class="container" data-aos="fade-up">
+          <h2 class="headingtitle"><b>The Process</b></h2>
+		  <img src="assets/img/Personal/DD2.png" class ="avatar9" alt="">
+		  </div>
+    </section>
+	
+	<section>
+      <div class="container" data-aos="fade-up">
+          <div>
+          <h2><b>Research</b></h2>
+          </div>
+		  <p class="justified">
+            <span class = "introtext"> To come up with the redesign, we had to go in depth to understand the painpoints of the users; do some <b>Evaluative research </b> </span></p>
+		<h4><b>Rival Website Analysis</b></h4>
+			<div class ="row">
+			<div class=" col-md-4 facts countermargin">
+            <div class="count-box">
+              <i class='bx bx-target-lock'></i>
+              <span data-toggle="counter-up">5</span>
+              <p>Research Websites Analyzed</p>
+			  </div>
+			  </div>
+			<div class="col-md-8">
+			<p class="justified"><span class="researchtext1"> We wanted to know what the other research websites offer. So we diverged and came up with pointers for each of them. </span> </p>
+			</div>
+			<img src="assets/img/Personal/CA2.jpg" class="avatar9" alt="">
+			</div>
+			<h4><b>Contextual Inquiries </b></h4>
+			<p class="justified"> <span class = "introtext"> Two participants were recruited and observed in their natural element. Insights were drawn from them thinking aloud while operating on the website. </span> </p>	
+			<div class ="row">
+			<div class ="col-md-4">
+			<img src="assets/img/Personal/contextualinquiries.png" class="avatar7" alt="">
+			</div>
+			<div class=" col-md-4 facts countermargin">
+            <div class="count-box">
+              <i class="icofont-people"></i>
+              <span data-toggle="counter-up">2</span>
+              <p>Participants Observed</p>
+			  </div>
+			  </div>
+			  <div class ="col-md-4 countermargin">
+			  <blockquote> <i>I think this button is a little weird, it’s on like every page Did you find what you were looking for today? It looks like a button but it is actually a link in a box. That's kinda weird. I don’t want to go there, it scares me.</i></blockquote>
+			  <blockquote> <i>These campus partners could use more visual hierarchy, like they just have text and the text that is linked is blue and that is what set</i></blockquote>
+			  </div>
+            </div>
+			<h4><b>User Interviews </b></h4>
+			<p class="justified"> <span class = "introtext"> Three participants were asked to participate in a full interview that was semi-structured.  Specific inputs from the participants enabled us to strengthen the findings and combine the insights obtained from the contextual inquiries. </span> </p>	
+			<div class ="row">
+			<div class ="col-md-4">
+			<img src="assets/img/Personal/interview.jpg" alt="">
+			</div>
+			<div class=" col-md-4 facts countermargin">
+            <div class="count-box">
+              <i class="icofont-people"></i>
+              <span data-toggle="counter-up">3</span>
+              <p>Participants Interviewed</p>
+			  </div>
+			  </div>
+			  <div class ="col-md-4 countermargin">
+			  <blockquote> <i>Maybe when you click on Research, this should be the first thing that pops up. This is what UMBC does. This is far more interesting. Every website says that they do cross-disciplinary research. But it is nice to see examples of it, like they do here with this. But they currently have this at the second to last last item in their menu. So....</i></blockquote>
+			  <blockquote> <i>I do notice after looking at the menu on the left that a range of items have appeared which do relate to research centers. They should actually be listed in the main content of the page.</i></blockquote>
+			  </div>
+            </div>
+			</div>
+		</section>
+	
   </main><!-- End #main -->
+	
+	<!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <h3>Anirudh Nagraj</h3>
+      <p>Come say a hi! 👋</p>
+      <div class="social-links">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+      <div class="copyright">
+        <strong><span>Curated with a lot of thought and passion</span></strong>.
+      </div>
+    </div>
+  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
   <div id="preloader"></div>
