--- a/coeit-research.html
+++ b/coeit-research.html
@@ -202,9 +202,62 @@
 			  <blockquote> <i>I do notice after looking at the menu on the left that a range of items have appeared which do relate to research centers. They should actually be listed in the main content of the page.</i></blockquote>
 			  </div>
             </div>
+			<h4><b>Heuristic Evaluation </b></h4>
+			<p class="justified"> <span class = "introtext"> Heuristic evaluations were conducted on the College of Engineering and Information Technology (COEIT) research section to determine the extent of its functionality and its effect on user experience. To achieve this, we strived to identify specific issues with the website, per Nielsen’s Ten Heuristics. We converged and explored the website and evaluated the interface to find usability problems. These problems were recorded in the form of a written report using Usability Aspect Reports (UARs).</span> </p>	
+			<div class ="row">
+			<div class=" col-md-4 facts countermargin">
+            <div class="count-box">
+              <i class="icofont-people"></i>
+              <span data-toggle="counter-up">19</span>
+              <p>Total UAR's</p>
+			  </div>
+			  </div>
+			  <div class ="col-md-8 countermargin">
+			  <img src="assets/img/Personal/UAR-sample.png" class="avatar8" alt="">
+			  </div>
+            </div>
 			</div>
 		</section>
+
+	  <div class="row" data-aos="fade-up">
+	  <div class ="col-md-6 margins" id="painpoints">
+          <h2 class="headingtitle2"><b>PAIN POINTS </b></h2>
+			<ul class="listitems">
+				<li>Stressed on the lack of contact information for various resources and services listed on the website, which would otherwise promote collaboration. </li>
+				<li>The navigation of the COEIT website involved some frustration and confusion</li>
+				<li>Lack of nesting of information caused frustration.</li><li>Participants were aggravated by the lack of internal consistency within the website, regarding the navigational menu, and navigation within its sub pages.</li>
+				<li>Participants felt that information was just 'there' and does not serve any purpose.</li>
+			</ul>
+	  </div>
+	  <div class ="col-md-6" id="insights2">
+          <h2 class="headingtitle2"><b>INSIGHTS</b></h2>
+			<ul class="listitems">
+				<li> There may be instances where she feels like there is information overload.</li>
+				<li>Participants look for smoother navigation.</li>
+				<li>Text can be spaced out, brief and more meaningful</li>
+				<li>Participants mentioned that it would serve the website’s purpose better to place the Research Highlights tab much further above in the navigation menu.</li>
+				<li>Participants were particularly impressed by the positioning and the usages of images along with the text to draw attention.</li>
+			</ul>
+	  </div>
+	  </div>
 	
+	<section>
+      <div class="container" data-aos="fade-up">
+	<h2 class="portfolio-title"><b>Personas</b></h2>
+		 <p class="justified">
+            <span class = "introtext">Using the insights and pain points, we created two personas to reflect the key characteristics of our participants, that aided us in developing an understanding of current users and potential users and create the redesigns accordingly. </span> </p>
+		  <div class ="row">
+		  <div class ="col-md-6">
+		  <img src="assets/img/Personal/Persona1.png" class="avatar7"  alt="">
+          </div>
+		  <div class="col-md-6">
+		  <img src="assets/img/Personal/Persona2.png" class="avatar7" alt="">
+			 </p>
+          </div>
+		</div>
+        </div>
+    </section><!-- End Portfolio Details -->
+		
   </main><!-- End #main -->
 	
 	<!-- ======= Footer ======= -->
