--- a/coeit-research.html
+++ b/coeit-research.html
@@ -151,7 +151,7 @@
           <h2><b>Research</b></h2>
           </div>
 		  <p class="justified">
-            <span class = "introtext"> To come up with the redesign, we had to go in depth to understand the painpoints of the users; do some <b>Evaluative research </b> </span></p>
+            <span class = "introtext"> To come up with the redesign, we had to go in depth to understand the painpoints of the users; do some <b>Evaluative research.</b> </span></p>
 		<h4><b>Rival Website Analysis</b></h4>
 			<div class ="row">
 			<div class=" col-md-4 facts countermargin">
@@ -216,11 +216,25 @@
 			  <img src="assets/img/Personal/UAR-sample.png" class="avatar8" alt="">
 			  </div>
             </div>
-			</div>
+			<h4><b>Personas</b></h4>
+		 <p class="justified">
+            <span class = "introtext">Using the insights and pain points, we created two personas to reflect the key characteristics of our participants, that aided us in developing an understanding of current users and potential users and create the redesigns accordingly. </span> </p>
+		  <div class ="row">
+		  <div class ="col-md-6">
+		  <img src="assets/img/Personal/Persona1.png" class="avatar7"  alt="">
+          </div>
+		  <div class="col-md-6">
+		  <img src="assets/img/Personal/Persona2.png" class="avatar7" alt="">
+			 </p>
+          </div>
+		</div>
+        </div>
+			
 		</section>
-
+		
+	<section>
 	  <div class="row" data-aos="fade-up">
-	  <div class ="col-md-6 margins" id="painpoints">
+	  <div class ="col-md-6" id="painpoints">
           <h2 class="headingtitle2"><b>PAIN POINTS </b></h2>
 			<ul class="listitems">
 				<li>Stressed on the lack of contact information for various resources and services listed on the website, which would otherwise promote collaboration. </li>
@@ -240,23 +254,57 @@
 			</ul>
 	  </div>
 	  </div>
+	</div>
+	</section>
 	
 	<section>
-      <div class="container" data-aos="fade-up">
-	<h2 class="portfolio-title"><b>Personas</b></h2>
-		 <p class="justified">
-            <span class = "introtext">Using the insights and pain points, we created two personas to reflect the key characteristics of our participants, that aided us in developing an understanding of current users and potential users and create the redesigns accordingly. </span> </p>
-		  <div class ="row">
-		  <div class ="col-md-6">
-		  <img src="assets/img/Personal/Persona1.png" class="avatar7"  alt="">
+	<div class="container" data-aos="fade-up">
+          <div>
+          <h2><b>Design</b></h2>
           </div>
-		  <div class="col-md-6">
-		  <img src="assets/img/Personal/Persona2.png" class="avatar7" alt="">
-			 </p>
+		  <p class="justified">
+            <span class = "introtext"> With the data collected and showed Shendelzare where the problem lied, we were now ready for the redesign. We wanted to go in phases and start  from the skeletal structure of the website. We used <span class="irqhighlight"> Pen and Paper </span> for low fidelity, <span class="irqhighlight"> draw.io </span> for medium fidelity, and <span class="irqhighlight"> Adobe XD </span> for high fidelity mockups and the actual prototype.</p>
+			<h4 class ="uppermargin"><b>Pen - Paper Sketches</b></h4>	
+		  <span class="introtext">Populating all the insights, we converged and made sketches on paper as a starting point for the redesign and went back to Shendelzare to show our progress.</span></p>
+		  <h6 style="color:blue;"><b>Member Checking</b></h6>
+		  <p class="justified">
+            <span class = "introtext3"> The designed sketches may not have correctly encapsulated our participant’s suggestions. To verify this, we employed <span class ="irqhighlight"><b> MEMBER CHECKING</b> </span> (a technique for exploring the credibility of results. Data or results are returned to participants to check for accuracy and resonance with their experiences) may be used.</span></p>
+		 
+		  <div class="row">
+		  <div class="col-md-4"> 
+		  <img src="assets/img/Personal/LFC1.png" class="avatar8"  alt="">
           </div>
-		</div>
-        </div>
-    </section><!-- End Portfolio Details -->
+		  <div class="col-md-4"> 
+		  <img src="assets/img/Personal/LFC2.png" class="avatar8"  alt="">
+		  </div>
+		   <div class="col-md-4"> 
+		   <img src="assets/img/Personal/LFC3.jpg" class="avatar8"  alt="">
+		  </div>
+		  </div>
+	
+	<h4 class ="uppermargin"><b>Digital Mockups</b></h4>	
+		  <span class="introtext">Shendelzare wanted to see the redesign in a digital format. Hence, we shifted to draw.io and showed her the changes we intended to do.</span></p>
+		<div class="row">
+		  <div class="col-md-6"> 
+		  <img src="assets/img/Personal/MFC1.jpg" class="avatar8"  alt="">
+          </div>
+		  <div class="col-md-6"> 
+		  <img src="assets/img/Personal/MFC2.png" class="avatar8"  alt="">
+		  </div>
+		 </div>
+	<h4 class ="uppermargin"><b>High Fidelity Mockups</b></h4>	
+		  <span class="introtext">Improving the color, fidelity and showing the overall redesign.</span></p>
+		
+		<h6 style="color:blue;"><b>HOME SCREEN</b></h6>
+		<div class="row">
+		  <div class="col-md-6"> 
+		  <img src="assets/img/Personal/HF1.png" class="avatar8"  alt="">
+          </div>
+		  <div class="col-md-6"> 
+		  <img src="assets/img/Personal/HF2.png" class="avatar8"  alt="">
+		  </div>
+	</div>
+	</section>
 		
   </main><!-- End #main -->
 	
