--- a/coeit-research.html
+++ b/coeit-research.html
@@ -303,7 +303,27 @@
 		  <div class="col-md-6"> 
 		  <img src="assets/img/Personal/HF2.png" class="avatar8"  alt="">
 		  </div>
-	</div>
+		</div>
+		
+		<h6 style="color:blue;" class="uppermargin"><b> SECONDARY SCREEN</b></h6>
+		<div class="row">
+		  <div class="col-md-6"> 
+		  <img src="assets/img/Personal/HF3.png" class="avatar8"  alt="">
+          </div>
+		  <div class="col-md-6"> 
+		  <img src="assets/img/Personal/HF4.png" class="avatar8"  alt="">
+		  </div>
+		</div>
+		
+		<h6 style="color:blue;" class="uppermargin"><b> FORMS SCREEN</b></h6>
+		<div class="row">
+		  <div class="col-md-6"> 
+		  <img src="assets/img/Personal/HF5.png" class="avatar8"  alt="">
+          </div>
+		  <div class="col-md-6"> 
+		  <img src="assets/img/Personal/HF6.png" class="avatar8"  alt="">
+		  </div>
+		</div>
 	</section>
 		
   </main><!-- End #main -->
