--- a/coeit-research.html
+++ b/coeit-research.html
@@ -325,7 +325,43 @@
 		  </div>
 		</div>
 	</section>
-		
+	
+	<section id="insights">
+      <div class="container" data-aos="fade-up">
+	  <h2 class="headingtitle"><b>Research Questions Answered</b></h2>
+	  <div class="row">
+	  <div class="col-md-2"> 
+		  <img src="assets/img/Personal/avatar4.png" class="img-fluid"  alt="">
+          </div>
+		  <div class="col-md-10">
+			<ul class="listitems">
+				<li>Is the banner of the “College of Engineering and Information Technology” legible?</li>
+				<li>Can users easily identify which page they are currently on?</li>
+				<li>Is the website consistent with UMBC’s theme</li>
+				<li>Can users identify how to navigate to the Home page?</li>
+				<li>Can users efficiently navigate through the website?</li>
+				<li>Do users know where and how to submit feedback on their experience?</li>
+			</ul>
+	  </div>
+	  </div>
+	  </div>
+    </section>
+	
+	<section>
+	<div class="container">
+	<h2 class ="uppermargin"><b>Prototype </b></h2>	
+		  <span class="introtext">The working prototype on <span class="irqhighlight"> Adobe XD </span></p>
+		  </div>
+		  <img src="assets/img/Personal/COEIT 3.gif" class="avatar4"  alt="">
+	
+	</section>
+	
+	 <section id="insights">
+      <div class="container" data-aos="fade-up">
+          <h2 class="headingtitle"><b>Takeaways</b></h2>
+		<p class="headingtitle"><span class="introtext">As the COEIT research website is a text-heavy website with a lot of cross-page navigation, we wanted to focus on incremental development rather than changing the setup altogether. We have come up with the designs so that all the concerns and pain points are taken care of. We were cautious in choosing the color of the buttons, how the pagination works on the page, and allowing the user some freedom on the reverse navigation, something that the users complained about. Additionally, this was an enjoyable experience as it involved a lot of user research and data synthesis. I got a teammate who helped me grow as the project wore on. In the future, we would like to see this design change being implemented as we believe that our prototype <span class="irqhighlight"> <b> can attract a much bigger audience </b></span>, given our exhaustive and extensive work to refine the existing website  </span></p>
+	  </div>
+    </section>
   </main><!-- End #main -->
 	
 	<!-- ======= Footer ======= -->
