--- a/coeit-research.html
+++ b/coeit-research.html
@@ -96,8 +96,8 @@
           </div>
 		  <div class="col-md-10">
 		  <p class="justified">
-            <span class = "introtext"> Shendelzare, is the lead when it comes to the University of Maryland, Baltimore County's College of Engineering and Information technology's <b>(Abbv COEIT)</b> research website</span> </p>
-			<span class = "introtext"> Her issues stem from the decreased usability of the COEIT research website. The team of another student and myself decided to take matters into our own hands as a term research project and make the website usable, user friendly via user researh and incorporating UX methodologies. </span> </p>
+            <span class = "introtext"> Shendelzare, is a lead at the University of Maryland, Baltimore County (Abbv UMBC)'s College of Engineering and Information technology's <b>(Abbv COEIT)</b> research website</span> </p>
+			<span class = "introtext"> Her issues stem from the decreased usability of the COEIT research website and cites decreased user reach in the website. The team of another student and myself decided to take matters into our own hands as a term research project and make the website usable, user friendly via user researh and incorporating UX methodologies. </span> </p>
           </div>
 		</div>
         </div>
@@ -329,12 +329,7 @@
 	<section id="insights">
       <div class="container" data-aos="fade-up">
 	  <h2 class="headingtitle"><b>Research Questions Answered</b></h2>
-	  <div class="row">
-	  <div class="col-md-2"> 
-		  <img src="assets/img/Personal/avatar4.png" class="img-fluid"  alt="">
-          </div>
-		  <div class="col-md-10">
-			<ul class="listitems">
+		<ul class="listitems">
 				<li>Is the banner of the “College of Engineering and Information Technology” legible?</li>
 				<li>Can users easily identify which page they are currently on?</li>
 				<li>Is the website consistent with UMBC’s theme</li>
@@ -342,7 +337,6 @@
 				<li>Can users efficiently navigate through the website?</li>
 				<li>Do users know where and how to submit feedback on their experience?</li>
 			</ul>
-	  </div>
 	  </div>
 	  </div>
     </section>
@@ -355,6 +349,29 @@
 		  <img src="assets/img/Personal/COEIT 3.gif" class="avatar4"  alt="">
 	
 	</section>
+	
+	<section>
+      <div class="container" data-aos="fade-up">
+	<h2 class="portfolio-title"><b>Showing Shendelzare the impact of the redesign</b></h2>
+		  <div class ="row">
+		  <div class ="col-md-2">
+		  <img src="assets/img/Personal/avatar4.png" class="img-fluid"  alt="">
+          </div>
+		  <div class="col-md-10">
+		  <p class="justified">
+            <span class = "introtext">With the prototype in place, we showed Shendelzare the positive outcome of the redesign. </span> </p>
+			<h4><span class="irqhighlight2"> POSITIVE IMPACT POINTERS  </span></h4>
+			<span class = "introtext"> From the insights and the prototype developed, we did A/B testing and showed the results of the evaluation to Shendelzare. We showed that the proposed changes would lead to :</span> </p>
+			<ul>
+				<li><span class= "irqhighlight"> An increase in the number of people visiting the site </span></li>
+				<li><span class= "irqhighlight">Greater user retention </span></li>
+				<li><span class= "irqhighlight">Simpler navigation for the users</span></li>
+				<li><span class= "irqhighlight"> Better struture within the website </span> </li>
+				
+          </div>
+		</div>
+        </div>
+    </section>
 	
 	 <section id="insights">
       <div class="container" data-aos="fade-up">
