--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -349,7 +349,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        <strong><span>Curated with a lot of thought and passion </span></strong>.
+        <strong><span>Curated with a lot of thought and passion. </span></strong>.
       </div>
     </div>
   </footer><!-- End Footer -->
