--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/Personal/Logo.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Personal/Logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -58,7 +58,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Anirudh Nagraj</h1>
+      <h1>Hi! 👋 I am Anirudh Nagraj</h1>
       <p>I'm a <span class="typed" data-typed-items="Researcher, Problem Solver, Thinker, Traveller"></span></p>
       
     </div>
