--- a/coeit-research.html
+++ b/coeit-research.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light light">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light light">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -57,12 +57,12 @@
   <main>
 
     <!-- ======= Portfolio Details ======= -->
-        <section id="portfolio-details" class="portfolio-details">
+        <section id="portfolio-details" class="portfolio-details mygradient">
       <div class="container herosection" data-aos="fade-up">
 
         <div class="row">
 
-          <div class="col-lg-8 titlebox">
+          <div class="col-lg-8 d-flex align-items-center">
             <h1 class="portfolio-title1">University of Maryland, Baltimore County - College of Engineering and Information Technology's Research Website Redesign</h1>
             
           </div>
