--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets\css\style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyResume - v2.2.0
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -58,8 +52,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Hi! 👋 I am Anirudh Nagraj</h1>
-      <p>I'm a <span class="typed" data-typed-items="Researcher, Problem Solver, Thinker, Traveller"></span></p>
+      <h1>Hi! 🙏 I am Anirudh Nagraj</h1>
+      <p>I'm a <span class="typed" data-typed-items="Researcher, Problem Solver, Thinker"></span></p>
       
     </div>
   </section><!-- End Hero -->
@@ -94,7 +88,7 @@
     
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <section id="portfolio services" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
 	  
@@ -166,7 +160,7 @@
                 </svg>
                 <i class='bx bx-mobile-vibration'></i>
               </div>
-              <h4><a href="">B-AID</a></h4>
+              <h4><a href="mobileapp.html">B-AID</a></h4>
               <p>A mobile application prototype for individuals who are visually impaired.</p>
             </div>
           </div>
