--- a/mobileapp.html
+++ b/mobileapp.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light light">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -56,18 +56,18 @@
 
   <main>
 
-     <section id="portfolio-details" class="portfolio-details">
+     <section id="portfolio-details" class="portfolio-details mygradient">
       <div class="container herosection" data-aos="fade-up">
+		
+		<div class="row">
 
-        <div class="row">
-
-          <div class="col-lg-8 titlebox">
+          <div class="col-lg-8 d-flex align-items-center">
             <h1 class="portfolio-title1">B-AID : An assistive device for individuals who are blind</h1>
             
           </div>
 
           <div class="col-lg-4 portfolio-info introbox">
-            <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
+            <h3><b>PROJECT INFORMATION</b></h3>
             <ul>
               <li><strong>Categories</strong>: Accessibility, Mobile Technology, User-Centered Design</li>
               <li><strong>User Base</strong>: Runners who are blind</li>
@@ -75,9 +75,13 @@
               <li><strong>Team Members</strong>: Solo Project</a></li>
 			  <li><strong>My Role</strong>: UX researcher and UX designer</a></li>
             </ul>
+
+          
           </div>
+
         </div>
-      </div>
+		
+       </div>
     </section><!-- End Portfolio Details -->
 
 	<section>
@@ -298,7 +302,7 @@
           </div>
 		  <div class="col-md-8">
 		  <p class="justified">
-            <span class = "introtext">What can we expect from the prototype? </span> </p>
+            <span class = "introtext">What can we expect from the pror </span> </p>
 			<h4><span class="irqhighlight2"> IMPACT </span></h4>
 			<span class = "introtext"> From the insights and the prototype developed, I am confident that</span> </p>
 			<ul>
