--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light light">
+<nav class="navbar sticky-top  navbar-expand-lg navbar-light light">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -51,12 +51,12 @@
   <main>
 
     <!-- ======= Portfolio Details ======= -->
-    <section id="portfolio-details" class="portfolio-details">
+    <section id="portfolio-details" class="portfolio-details mygradient">
       <div class="container herosection" data-aos="fade-up">
 
         <div class="row">
 
-          <div class="col-lg-8 titlebox">
+          <div class="col-lg-8 d-flex align-items-center">
             <h1 class="portfolio-title1">Navigational Aid for runners who are blind - TRIDENT</h1>
             
           </div>
