--- a/mobileapp.html
+++ b/mobileapp.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-<nav class="navbar fixed-top navbar-expand-lg navbar-light light">
+<nav class="navbar sticky-top  navbar-expand-lg navbar-light light">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
