--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -32,20 +32,30 @@
 
 <body>
 <nav class="navbar sticky-top  navbar-expand-lg navbar-light light">
-  <a class="navbar-brand" href="#"></a>
+  <a class="navbar-brand" href="index.html"><img class="object" src="assets/img/Personal/Logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span> <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"><span class="whitecolor">Projects</span></a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
+          Projects</span>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Trident</a>
+          <a class="dropdown-item" href="#">COEIT Research</a>
+          <a class="dropdown-item" href="#">COEIT SSC</a>
+		  <a class="dropdown-item" href="#">B-AID</a>
+        </div>
+      </li>
+	   <li class="nav-item active">
+        <a class="nav-link" href="index.html#projects"><span class="whitecolor">Resume</span></a>
       </li>
     </ul>
-    <span class="whitecolor">A researcher who loves storytelling</span>
   </div>
 </nav>
   <main>
