--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -46,10 +46,9 @@
           Projects</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Trident</a>
-          <a class="dropdown-item" href="#">COEIT Research</a>
-          <a class="dropdown-item" href="#">COEIT SSC</a>
-		  <a class="dropdown-item" href="#">B-AID</a>
+          <a class="dropdown-item" href="coeit-research.html">COEIT Research</a>
+          <a class="dropdown-item" href="coeit-ssc.html">COEIT SSC</a>
+		  <a class="dropdown-item" href="mobileapp.html">B-AID</a>
         </div>
       </li>
 	   <li class="nav-item active">
