--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About</h2>
+          <h2>A LITTLE ABOUT MYSELF</h2>
           <p class ="justified">
-		  I am Anirudh Nagraj, an aspiring User Experience Professional. From a very young age, I have been drawn towards accessibility, and how I can be of help to people. Before I stepped foot into the world of UX, I was employed as a Software Developer at LTI. That gig was cool but it rocked me to my core, and significantly altered my thought process. I started questioning stuff instead of simply going ahead with specifics. This led to me to touch my passion waters again and pursue a master’s degree in Human-Centered Computing </p>
+		  I am Anirudh Nagraj, an aspiring User Experience Professional. From a very young age, I have been drawn towards accessibility, and how I can be of help to people. Before I stepped foot into the world of UX, I was employed as a Software Developer at LTI. That gig was cool but it rocked me to my core, and significantly altered my thought process. I started questioning stuff instead of simply going ahead with specifics. This led to me to touch my passion waters again and pursue a master’s degree in Human-Centered Computing. </p>
         </div>
 
         <div class="row">
@@ -77,7 +77,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>UX Research &amp; Accessibility</h3>
             <p class="justified">
-              I have been involved in research on accessibility from the time I joined the university and I am currently investigating the navigational habits of people who are blind. I intend to look at ways in which a user-centered approach can increase accessibility. Through the data collected, I intend to look at ways in which participatory design can be incorporated with such an audience. My projects have taken me from blind schools to house-holds with acute water shortages to sitting on an office chair, working on company projects, to sitting in a classroom again ; only this time, I ponder on how to make people’s lives easier through better design through my efforts in the world of UX.
+              I have been involved in research on accessibility from the time I joined the university and I am currently investigating the navigational habits of people who are blind. I intend to look at ways in which a user-centered approach can increase accessibility. Through the data collected, I intend to look at ways in which participatory design can be incorporated with such an audience and set reference pointers for future projects related to accessibility and navigation in low-and middle income countries. My projects have taken me from blind schools to house-holds with acute water shortages to sitting on an office chair, working on company projects, to sitting in a classroom again ;only this time, I ponder on how to make people’s lives easier through better design through my efforts in the world of UX.
             </p>
           </div>
         </div>
@@ -148,7 +148,7 @@
                 </svg>
                 <i class='bx bx-analyse'></i>
               </div>
-              <h4><a href="">Web research project #2</a></h4>
+              <h4><a href="coeit-ssc">Web research project #2</a></h4>
               <p>User research project of the University of Maryland, Baltimore County's College of Engineering and Information Technology's SHARED SERVICES CENTER website.</p>
             </div>
           </div>
