--- a/coeit-research.html
+++ b/coeit-research.html
@@ -43,8 +43,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav ml-auto">
+	<li class="nav-item active">
+        <a class="nav-link" href="index.html"><span class="whitecolor">Home</span> <span class="sr-only">(current)</span></a>
+      </li>
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html#about"><span class="whitecolor">About</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
@@ -77,7 +80,7 @@
           </div>
 
           <div class="col-lg-4 portfolio-info introbox">
-            <h3><b>PROJECT INFORMATION</b></h3>
+            <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
             <ul>
               <li><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
               <li><strong>User Base</strong>: Students, Faculty, Researchers.</li>
@@ -114,7 +117,7 @@
 	
 	<section id="requirements">
       <div class="container" data-aos="fade-up">
-          <div class="horizontalline4"></div>
+          <div class="horizontalline2"></div>
 		  <div>
           <h2 class="coeit-introduction" id="requirements"><b>Requirements</b></h2>
           </div>
