--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Personal/Logo.png" rel="icon">
+  <link href="assets/img/Personal/Logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -58,7 +58,7 @@
         </div>
       </li>
 	   <li class="nav-item active">
-        <a class="nav-link" href="index.html#projects"><span class="whitecolor">Resume</span></a>
+        <a class="nav-link" href="index.html#resume"><span class="whitecolor">Resume</span></a>
       </li>
     </ul>
   </div>
@@ -79,7 +79,7 @@
           </div>
 
           <div class="col-lg-4 portfolio-info introbox">
-            <h3><b>PROJECT INFORMATION</b></h3>
+            <h3 class="projectbox"><b>PROJECT INFORMATION</b></h3>
             <ul>
               <li><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
               <li><strong>User Base</strong>: Students, Faculty, and .</li>
@@ -114,8 +114,11 @@
         </div>
     </section>
 	
-	<h1>More coming soon </h1>
-
+	<section>
+	<div class="container">
+	<h2 style="color:blue"><i>More coming soon... </i> </h2>
+	</div>
+	</section>
   </main><!-- End #main -->
 
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
