--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </svg>
                 <i class='bx bx-analyse'></i>
               </div>
-              <h4><a href="coeit-ssc">Web research project #2</a></h4>
+              <h4><a href="coeit-ssc.html">Web research project #2</a></h4>
               <p>User research project of the University of Maryland, Baltimore County's College of Engineering and Information Technology's SHARED SERVICES CENTER website.</p>
             </div>
           </div>
